fix overflows

--- a/src/style.css
+++ b/src/style.css
@@ -27,9 +27,12 @@ li {
 }
 
 .space-cards {
-  display: grid;
+  /* display: grid;
   column-gap: 50px;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card-shad {
